- Ajusta corsConfig para permitir localhost:8081 e localhost:8082 - Ajusta regex de telefone